# marimo_cheminformatics

./: .gitignore  README.md  Untitled.ipynb  altair_regression_plot.py  foo.py  marimo_mol_plot.py  marimo_reos.py  marimo_smarts_view.py  molview.py  pyproject.toml  requirements.txt  test.py
.virtual_documents/: Untitled.ipynb
